// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AllComponents c-accordion renders correctly 1`] = `<ul data-type="accordion" data-group="containers" data-uid="1" class="v-expansion-panel c-element c-accordion  c-element-parent "></ul>`;

exports[`AllComponents c-accordion-item renders correctly 1`] = `
<li tabindex="0" data-type="accordion-item" data-group="container-items" data-uid="2" class="v-expansion-panel__container c-element c-accordion-item  c-element-parent ">
  <div class="v-expansion-panel__header">
    <div></div>
    <div class="v-expansion-panel__header__icon">
      <i aria-hidden="true" class="v-icon material-icons">$vuetify.icons.expand</i>
    </div>
  </div>
  <div class="v-expansion-panel__body" style="display:none;">
    <div class="v-card" style="height:undefined;">
      <div class="v-card__text c-element-children c-accordion-item-items"></div>
    </div>
  </div>
</li>
`;

exports[`AllComponents c-button renders correctly 1`] = `
<button type="button" data-type="button" data-group="inputs" data-uid="3" class="c-element c-button  v-btn primary">
  <div class="v-btn__content"></div>
</button>
`;

exports[`AllComponents c-calculation renders correctly 1`] = `
<div data-type="calculation" data-group="inputs" data-uid="4" class="c-element c-calculation ">
  <div class="v-input v-text-field">
    <div class="v-input__control">
      <div class="v-input__slot" style="height:undefined;">
        <div class="v-text-field__slot">
          <input type="text">
        </div>
      </div>
      <div class="v-text-field__details">
        <div class="v-messages">
          <div class="v-messages__wrapper"></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AllComponents c-check renders correctly 1`] = `
<div data-type="check" data-group="inputs" data-uid="5" class="v-input c-element c-check  v-input--selection-controls v-input--checkbox">
  <div class="v-input__control">
    <div class="v-input__slot" style="height:undefined;">
      <div class="v-input--selection-controls__input">
        <input aria-checked="false" role="checkbox" type="checkbox" data-type="check" data-group="inputs" data-uid="5">
        <div class="v-input--selection-controls__ripple"></div>
        <i aria-hidden="true" class="v-icon material-icons">check_box_outline_blank</i>
      </div>
    </div>
    <div class="v-messages">
      <div class="v-messages__wrapper"></div>
    </div>
  </div>
</div>
`;

exports[`AllComponents c-check-list renders correctly 1`] = `
<div data-type="check-list" data-group="inputs" data-uid="6" class="c-element c-check-list  v-card v-card--flat transparent" style="height:undefined;">
  <label aria-hidden="true" class="v-label" style="left:0px;right:auto;position:relative;"></label>
  <div class="input-group__details error--text"></div>
</div>
`;

exports[`AllComponents c-date renders correctly 1`] = `
<div data-type="date" data-group="inputs" data-uid="7" class="v-menu c-element c-date ">
  <div class="v-menu__activator">
    <div class="v-input v-text-field v-input--is-readonly">
      <div class="v-input__prepend-outer">
        <div class="v-input__icon v-input__icon--prepend">
          <i aria-hidden="true" class="v-icon material-icons">event</i>
        </div>
      </div>
      <div class="v-input__control">
        <div class="v-input__slot" style="height:undefined;">
          <div class="v-text-field__slot">
            <input readonly="readonly" type="text">
          </div>
          <div class="v-input__append-inner">
            <div class="v-input__icon v-input__icon--">
              <i aria-hidden="true" class="v-icon v-icon--link material-icons"></i>
            </div>
          </div>
        </div>
        <div class="v-text-field__details">
          <div class="v-messages">
            <div class="v-messages__wrapper"></div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="v-menu__content" style="max-height:auto;min-width:auto;max-width:auto;top:12px;left:0px;transform-origin:top left;z-index:0;display:none;">
    <div data-type="date" data-group="inputs" data-uid="17" class="c-element c-picker d-inline-block v-card v-card--flat" style="height:undefined;">
      <div class="v-picker v-card v-picker--date">
        <div class="v-picker__title primary">
          <div class="v-date-picker-title">
            <div class="v-picker__title__btn v-date-picker-title__year">2018</div>
            <div class="v-picker__title__btn v-date-picker-title__date active">
              <div>&nbsp;</div>
            </div>
          </div>
        </div>
        <div class="v-picker__body" style="width:290px;">
          <div>
            <div class="v-date-picker-header">
              <button type="button" class="v-btn v-btn--icon">
                <div class="v-btn__content">
                  <i aria-hidden="true" class="v-icon material-icons">$vuetify.icons.next</i>
                </div>
              </button>
              <div class="v-date-picker-header__value"><strong class="accent--text">August 2018</strong></div>
              <button type="button" class="v-btn v-btn--icon">
                <div class="v-btn__content">
                  <i aria-hidden="true" class="v-icon material-icons">$vuetify.icons.prev</i>
                </div>
              </button>
            </div>
            <div class="v-date-picker-table v-date-picker-table--date">
              <table>
                <thead>
                  <tr>
                    <th>S</th>
                    <th>M</th>
                    <th>T</th>
                    <th>W</th>
                    <th>T</th>
                    <th>F</th>
                    <th>S</th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td></td>
                    <td></td>
                    <td></td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">1</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">2</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">3</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">4</div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">5</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">6</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">7</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating v-btn--outline accent--text">
                        <div class="v-btn__content">8</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">9</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">10</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">11</div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">12</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">13</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">14</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">15</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">16</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">17</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">18</div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">19</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">20</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">21</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">22</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">23</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">24</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">25</div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">26</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">27</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">28</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">29</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">30</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">31</div>
                      </button>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AllComponents c-date-range renders correctly 1`] = `
<div data-type="date-range" data-group="inputs" data-uid="9" class="v-menu c-element c-date-range ">
  <div class="v-menu__activator">
    <div class="v-input v-text-field v-input--is-label-active v-input--is-dirty v-input--is-readonly">
      <div class="v-input__prepend-outer">
        <div class="v-input__icon v-input__icon--prepend">
          <i aria-hidden="true" class="v-icon material-icons">event</i>
        </div>
      </div>
      <div class="v-input__control">
        <div class="v-input__slot" style="height:undefined;">
          <div class="v-text-field__slot">
            <input readonly="readonly" type="text" value="null - null">
          </div>
          <div class="v-input__append-inner">
            <div class="v-input__icon v-input__icon--clear">
              <i aria-hidden="true" class="v-icon v-icon--link material-icons">clear</i>
            </div>
          </div>
        </div>
        <div class="v-text-field__details">
          <div class="v-messages">
            <div class="v-messages__wrapper"></div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="v-menu__content" style="max-height:auto;min-width:auto;max-width:auto;top:12px;left:0px;transform-origin:top left;z-index:0;display:none;">
    <div data-type="date-range" data-group="inputs" data-uid="18" class="c-element c-picker d-inline-block mr-1 v-card v-card--flat" style="height:undefined;">
      <div class="v-picker v-card v-picker--date">
        <div class="v-picker__title primary">
          <div class="v-date-picker-title">
            <div class="v-picker__title__btn v-date-picker-title__year">2018</div>
            <div class="v-picker__title__btn v-date-picker-title__date active">
              <div>&nbsp;</div>
            </div>
          </div>
        </div>
        <div class="v-picker__body" style="width:290px;">
          <div>
            <div class="v-date-picker-header">
              <button type="button" class="v-btn v-btn--icon">
                <div class="v-btn__content">
                  <i aria-hidden="true" class="v-icon material-icons">$vuetify.icons.next</i>
                </div>
              </button>
              <div class="v-date-picker-header__value"><strong class="accent--text">August 2018</strong></div>
              <button type="button" class="v-btn v-btn--icon">
                <div class="v-btn__content">
                  <i aria-hidden="true" class="v-icon material-icons">$vuetify.icons.prev</i>
                </div>
              </button>
            </div>
            <div class="v-date-picker-table v-date-picker-table--date">
              <table>
                <thead>
                  <tr>
                    <th>S</th>
                    <th>M</th>
                    <th>T</th>
                    <th>W</th>
                    <th>T</th>
                    <th>F</th>
                    <th>S</th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td></td>
                    <td></td>
                    <td></td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">1</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">2</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">3</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">4</div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">5</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">6</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">7</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating v-btn--outline accent--text">
                        <div class="v-btn__content">8</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">9</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">10</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">11</div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">12</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">13</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">14</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">15</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">16</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">17</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">18</div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">19</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">20</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">21</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">22</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">23</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">24</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">25</div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">26</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">27</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">28</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">29</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">30</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">31</div>
                      </button>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div data-type="date-range" data-group="inputs" data-uid="19" class="c-element c-picker d-inline-block v-card v-card--flat" style="height:undefined;">
      <div class="v-picker v-card v-picker--date">
        <div class="v-picker__title primary">
          <div class="v-date-picker-title">
            <div class="v-picker__title__btn v-date-picker-title__year">2018</div>
            <div class="v-picker__title__btn v-date-picker-title__date active">
              <div>&nbsp;</div>
            </div>
          </div>
        </div>
        <div class="v-picker__body" style="width:290px;">
          <div>
            <div class="v-date-picker-header">
              <button type="button" class="v-btn v-btn--icon">
                <div class="v-btn__content">
                  <i aria-hidden="true" class="v-icon material-icons">$vuetify.icons.next</i>
                </div>
              </button>
              <div class="v-date-picker-header__value"><strong class="accent--text">August 2018</strong></div>
              <button type="button" class="v-btn v-btn--icon">
                <div class="v-btn__content">
                  <i aria-hidden="true" class="v-icon material-icons">$vuetify.icons.prev</i>
                </div>
              </button>
            </div>
            <div class="v-date-picker-table v-date-picker-table--date">
              <table>
                <thead>
                  <tr>
                    <th>S</th>
                    <th>M</th>
                    <th>T</th>
                    <th>W</th>
                    <th>T</th>
                    <th>F</th>
                    <th>S</th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td></td>
                    <td></td>
                    <td></td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">1</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">2</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">3</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">4</div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">5</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">6</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">7</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating v-btn--outline accent--text">
                        <div class="v-btn__content">8</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">9</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">10</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">11</div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">12</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">13</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">14</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">15</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">16</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">17</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">18</div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">19</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">20</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">21</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">22</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">23</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">24</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">25</div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">26</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">27</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">28</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">29</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">30</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">31</div>
                      </button>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AllComponents c-flexgrid renders correctly 1`] = `
<div data-type="flexgrid" data-group="containers" data-uid="12" class="c-element c-flexgrid  c-element-parent  v-card v-card--flat undefined grid-list-undefined wrap container" style="height:undefined;">
  <div class="layout undefined wrap"></div>
</div>
`;

exports[`AllComponents c-flexgrid-item renders correctly 1`] = `
<div data-type="flexgrid-item" data-group="container-items" data-uid="13" class="c-element c-flexgrid-item  c-element-parent  xsundefined undefined flex">
  <div class="c-element-children c-flexgrid-item-items"></div>
</div>
`;

exports[`AllComponents c-form renders correctly 1`] = `
<div data-type="form" data-group="widgets" data-uid="14" class="c-element c-form  c-element-parent  v-card v-card--flat" style="height:undefined;">
  <form novalidate="novalidate" class="v-form c-form c-element-children">
    <div class="v-card__text c-form-items"></div>
  </form>
</div>
`;
